--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "index.d.ts",
   "gypfile": true,
   "dependencies": {
-    "nan": "^2.5.0"
+    "nan": "2.8.0"
   },
   "repository": {
     "type": "git",
